--- a/forms.html
+++ b/forms.html
@@ -66,11 +66,12 @@
     <option value="patan cheruvu" selected>PATAN CHERUVU</option>
     <option value="balanagar">BALA NAGAR</option>
   </select>
-<center><img src="./project imgs/captcha.png" alt="captcha"></center>
+<center><img src="./captcha.png" alt="captcha"></center>
 <br>
 <center><input type="submit"></center>
   
      </form>
        </fieldset>
 </body>
+
 </html>
